Agrego system.properties para configurar Java 17 en Railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 server.port=9999
+
+java.runtime.version=17
